syntax = "proto3";

package chat;

option go_package = "./protomodels;protomodels";

enum MessageType {
  TEXT = 0;
  PHOTO = 1;
}

message ChatMessage {
  MessageType type = 1;
  string content = 2;
  string user_id = 3;
  string room_id = 4;
  int64 timestamp = 5;
}

message AddChatRoomRequest{
    string participant = 1;
}


message MessageModel {
  string id = 1;
  string sender_id = 2;
  string room_id = 3;
  string text = 4;
  string create_at = 5;
}

message MessageModelList {
repeated MessageModel messageModels = 1;
}

message ChatRoom{
  string id = 1;
  string name = 2;
  string userId = 3;
  string create_at = 4;
}

message ChatRoomList {
  repeated ChatRoom chatRooms = 1;
}








